[NEX-23] Resolve comments